<resources>
    <string name="app_name">MoverCaballo</string>
    <string name="banner_superior">Soy un banner superior</string>
    <string name="banner_inferior">Soy un banner inferior</string>
    <string name="titulo_aplicacion">Juega al ajedrez</string>
    <string name="nivel">Nivel</string>
    <string name="cero">0</string>
    <string name="movimientosTitulo">Moves</string>
    <string name="tiempoTitulo">Tiempo</string>
    <string name="vidasTitulo">Vidas</string>
    <string name="opcionesTitulo">Opciones</string>
    <string name="tiempo">00:00</string>
    <string name="celda">Celda</string>
    <string name="una_vida">1 vida</string>
    <string name="next">Next</string>
</resources>